--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
-		"postpackage": "esbuild --bundle --minify --platform=neutral dist/index.js --outfile=dist/zgl.min.js",
+		"postpackage": "esbuild --bundle --minify --platform=neutral dist/zgl.js --outfile=dist/zgl.min.js",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
