Add postpackage bundling step using esbuild

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
 	"name": "swissgl.svelte",
+	"license": "Apache-2.0",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
+		"postpackage": "esbuild --bundle --minify --platform=neutral dist/swissgl.js --outfile=dist/swissgl.min.js",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,6 +35,7 @@
 		"@types/webxr": "^0.5.5",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"esbuild": "^0.19.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
