--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-glsl": "^1.1.2",
     "vite-plugin-singlefile": "^0.13.5"
   }
 }
