Minify output html

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@sergeymakinen/vite-plugin-html-minimize": "^1.0.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-glsl": "^1.1.2",
