--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sergeymakinen/vite-plugin-html-minimize": "^1.0.6",
+    "terser": "^5.21.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-glsl": "^1.1.2",
