--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@sergeymakinen/vite-plugin-html-minimize": "^1.0.6",
+    "@types/webxr": "^0.5.7",
+    "lil-gui": "^0.19.0",
     "terser": "^5.21.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
