--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "vite": "^4.4.5",
     "vite-plugin-glsl": "^1.1.2",
     "vite-plugin-singlefile": "^0.13.5"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "lil-gui@0.19.0": "patches/lil-gui@0.19.0.patch"
+    }
   }
 }
