--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
+    "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -20,5 +19,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vite-plugin-glsl/ext"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/main.ts"]
 }
