--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "README.md"
   ],
   "devDependencies": {
+    "@eslint/js": "^8.53.0",
     "@sergeymakinen/vite-plugin-html-minimize": "^1.0.6",
+    "@types/eslint": "^8.44.7",
     "@types/webxr": "^0.5.7",
+    "eslint": "^8.53.0",
+    "globals": "^13.23.0",
     "lil-gui": "^0.19.0",
     "terser": "^5.21.0",
     "typescript": "^5.0.2",
@@ -53,6 +57,7 @@
     "lib:min": "esbuild --minify --platform=neutral dist/zgl.js --outfile=dist/zgl.min.js",
     "lib:terser": "terser dist/zgl.js -c -m --mangle-props --module --comments false -o dist/zgl.terser.js",
     "lib:tsc": "tsc -p tsconfig.lib.json",
+    "lint": "eslint .",
     "prepublishOnly": "pnpm lib",
     "preview": "vite preview"
   }
