--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@sergeymakinen/vite-plugin-html-minimize": "^1.0.6",
     "@types/eslint": "^8.44.7",
     "@types/webxr": "^0.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "globals": "^13.23.0",
