--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "globals": "^13.23.0",
     "lil-gui": "^0.19.0",
     "prettier": "^3.0.3",
+    "prettier-plugin-glsl": "^0.1.3",
     "terser": "^5.21.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
@@ -62,7 +63,7 @@
     "lib:terser": "terser dist/zgl.js -c -m --mangle-props --module --comments false -o dist/zgl.terser.js",
     "lib:tsc": "tsc -p tsconfig.lib.json",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
+    "format": "prettier --write '**/*.(css|html|js|json|md|ts|frag|glsl|vert)'",
     "prepublishOnly": "pnpm lint && pnpm lib",
     "preview": "vite preview"
   }
