Lower eslint rules to warn to pass

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/js": "^8.53.0",
     "@sergeymakinen/vite-plugin-html-minimize": "^1.0.6",
     "@types/eslint": "^8.44.7",
+    "@types/node": "^20.9.0",
     "@types/webxr": "^0.5.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -54,15 +55,18 @@
   },
   "scripts": {
     "dev": "vite",
+    "build": "ESBUILD=1 pnpm build:esm",
     "build:esm": "tsc && vite build",
-    "build": "MINIFY=esbuild pnpm build:esm",
-    "build:terser": "MINIFY=terser pnpm build:esm",
+    "build:terser": "TERSER=1 pnpm build:esm",
     "lib": "pnpm lib:esm && pnpm lib:min && pnpm lib:terser && pnpm lib:tsc",
     "lib:esm": "vite build -c vite.lib.config.js",
     "lib:min": "esbuild --minify --platform=neutral dist/zgl.js --outfile=dist/zgl.min.js",
     "lib:terser": "terser dist/zgl.js -c -m --mangle-props --module --comments false -o dist/zgl.terser.js",
     "lib:tsc": "tsc -p tsconfig.lib.json",
-    "lint": "prettier --check . && eslint .",
+    "lint": "prettier --check . && pnpm eslint",
+    "eslint": "eslint .",
+    "lint:fix": "pnpm format && pnpm eslint:fix",
+    "eslint:fix": "eslint --fix .",
     "format": "prettier --write '**/*.(css|html|js|json|md|ts|frag|glsl|vert)'",
     "prepublishOnly": "pnpm lint && pnpm lib",
     "preview": "vite preview"
