Setup @ alias to lib dist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "paths": { "@/*": ["./dist/*"] },
     "types": ["vite-plugin-glsl/ext"]
   },
   "include": ["src"]
